# websites-monitoring

./: Cargo.toml  Configuration.toml  Procfile  RustConfig  fixtures.sql
migrations/2019-12-07-094900_crawling_iterations/: down.sql  up.sql
migrations/2019-12-08-104757_websites_from_database/: down.sql  up.sql
src/: configuration.rs  fetcher.rs  iteration_ticker.rs  main.rs  receiver.rs  schema.rs
src/infrastructure/: database.rs  http_server.rs  logging.rs  mod.rs
