[package]
authors = ["Thomas Wickham <mackwic@gmail.com>"]
edition = "2018"
name = "monitor-websites"
version = "0.1.0"
[dependencies]
chrono = "*"
futures = "*"
log = "*"
reqwest = "0.10.0-alpha.2"
serde = { version = "*", features = ["derive"] }
toml = "*"

[dependencies.fern]
features = ["colored"]
version = "*"

[dependencies.tokio]
version = "0.2.0-alpha.6"
