[package]
authors = ["Thomas Wickham <mackwic@gmail.com>"]
edition = "2018"
name = "monitor-websites"
version = "0.1.0"
[dependencies]
chrono = "*"
envy = "*"
futures = "*"
log = "*"
reqwest = "0.10.0-alpha.2"
simple-server = "*"
toml = "*"

[dependencies.diesel]
features = ["postgres"]
version = "*"

[dependencies.fern]
features = ["colored"]
version = "*"

[dependencies.serde]
features = ["derive"]
version = "*"

[dependencies.tokio]
version = "0.2.0-alpha.6"
